Add a C++ BP Function Library to save position and orientation
Currently I'm not able to save all the real time pose but only one

--- a/DroneRescueNav.uproject
+++ b/DroneRescueNav.uproject
@@ -7,17 +7,20 @@
 		{
 			"Name": "DroneRescueNav",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
+		}
+	],
+	"Plugins": [
+		{
+			"Name": "AirSim",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
 		"MacNoEditor",
 		"WindowsNoEditor"
-	],
-	"Plugins": [
-		{
-			"Name": "AirSim",
-			"Enabled":  true
-		}
-	]  
+	]
 }
