--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+Plugins/AirSim/Source/Vehicles/Multirotor/GetLocation.cpp
+
+Plugins/AirSim/Source/Vehicles/Multirotor/GetLocation.h
