--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,4 +15,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/DroneRescueNav")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/DroneRescueNav")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="DroneRescueNavGameModeBase")
+bSmoothFrameRate=True
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=60.000000))
 
