--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,9 @@
 GameName=DroneRescueNav
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-EditorStartupMap=None
+GameDefaultMap=/Game/DroneBase/Maps/maze.maze
+EditorStartupMap=/Game/DroneBase/Maps/maze.maze
+GlobalDefaultGameMode=/Script/AirSim.AirSimGameMode
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -17,4 +18,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="DroneRescueNavGameModeBase")
 bSmoothFrameRate=True
 SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=60.000000))
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+SpatializationPlugin=Built-in Spatialization
 
