--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7B56DF274AA871F81C81378E1153B59E
 +MapsToCook=(FilePath="/AirSim/AirSimAssets")
+ProjectName=DroneNav
+CompanyName=PMAR Robotics Lab
+CompanyDistinguishedName=PMAR
+bUseBorderlessWindow=False
+bStartInVR=True
+
