Potential Field for 2-D obstacle avoidance implemented

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,5 @@ Plugins/AirSim/Source/Vehicles/Multirotor/GetLocation.cpp
 Plugins/AirSim/Source/Vehicles/Multirotor/GetLocation.h
 
 PythonAPI/provevarie.py
+
+PythonAPI/numpyTest.py
