--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=DroneRescueNav
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/DroneBase/Maps/maze.maze
-EditorStartupMap=/Game/DroneBase/Maps/maze.maze
+GameDefaultMap=/Game/DroneBase/Maps/maze-dynamic-obstacle.maze-dynamic-obstacle
+EditorStartupMap=/Game/DroneBase/Maps/maze-dynamic-obstacle.maze-dynamic-obstacle
 GlobalDefaultGameMode=/Script/AirSim.AirSimGameMode
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
