--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,8 +16,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/DroneRescueNav")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/DroneRescueNav")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="DroneRescueNavGameModeBase")
-bSmoothFrameRate=True
+bSmoothFrameRate=False
 SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=60.000000))
+bUseFixedFrameRate=True
+FixedFrameRate=120.000000
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 SpatializationPlugin=Built-in Spatialization
+
